--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <div class="viewport">
             <h1 class="float--left">
                                 
-                Raspberry Application
+                Air Quality Historical Data Platform
             </h1>
             <h2 class="float--right">
                 Powered by Predix
