--- a/public/polymer-loader.html
+++ b/public/polymer-loader.html
@@ -11,4 +11,4 @@
 <link rel="import" href="bower_components/px-context-browser/px-context-browser.html"/>
 <link rel="import" href="bower_components/px-card/px-card.html"/>
 <link rel="import" href="bower_components/px-rangepicker/px-rangepicker.html"/>
-
+<link rel="import" href="bower_components/px-chart/px-chart.html"/>
